--- a/index.html
+++ b/index.html
@@ -4,124 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Fake Review Detector</title>
-
-  <!-- Embedded CSS -->
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    header {
-      background-color: #0b3d91;
-      color: white;
-      padding: 40px 20px;
-      text-align: center;
-    }
-
-    header h1 {
-      margin-bottom: 10px;
-      font-size: 2.5rem;
-    }
-
-    main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 40px 20px;
-    }
-
-    .review-box {
-      width: 100%;
-      max-width: 600px;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-
-    textarea {
-      width: 100%;
-      height: 150px;
-      padding: 15px;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      font-size: 1rem;
-      resize: none;
-      box-shadow: 0 0 5px rgba(0,0,0,0.1);
-    }
-
-    button {
-      background-color: #0b3d91;
-      color: white;
-      border: none;
-      padding: 15px;
-      font-size: 1rem;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #092e6e;
-    }
-
-    #result-card {
-      margin-top: 40px;
-      background-color: white;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      max-width: 600px;
-      width: 100%;
-      text-align: center;
-    }
-
-    #result-card.hidden {
-      display: none;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #eee;
-    }
-    @media (max-width: 600px) {
-  header h1 {
-    font-size: 1.8rem;
-  }
-
-  header p {
-    font-size: 1rem;
-  }
-
-  textarea {
-    height: 120px;
-    font-size: 0.95rem;
-  }
-
-  button {
-    font-size: 1rem;
-    padding: 12px;
-  }
-
-  #result-card {
-    padding: 20px;
-  }
-
-  main {
-    padding: 20px 10px;
-  }
-}
-
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav>
+    <a href="index.html">Home</a> |
+    <a href="about.html">About</a> |
+    <a href="learn.html">Learn</a> |
+    <a href="tips.html">Tips</a> |
+    <a href="contact.html">Contact</a>
+  </nav>
+
   <header>
     <h1>Fake Review Detector</h1>
     <p>Analyze and detect suspicious reviews with AI</p>
@@ -140,24 +33,13 @@
   </main>
 
   <footer>
-    <p>&copy;Minor Project</p>
+    <p>&copy; Minor Project</p>
+    <div class="footer-links">
+      <a href="faq.html">FAQs</a> |
+      <a href="credits.html">Credits</a>
+    </div>
   </footer>
 
-  <script>
-    async function submitReview() {
-      const review = document.getElementById("review").value;
-      const response = await fetch("/analyze", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({ review: review })
-      });
-
-      const data = await response.json();
-      document.getElementById("result").innerText = data.result;
-      document.getElementById("result-card").classList.remove("hidden");
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
