--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fake Review Detector</title>
-  <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Fake Review Detector</title>
+    <link rel="stylesheet" href="/static/style.css">
+  </head>
+  
 </head>
 <body>
   <nav>
@@ -40,6 +42,7 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="/static/script.js"></script>
+
 </body>
 </html>
